--- a/elm/index.html
+++ b/elm/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Learn Elm Authentication</title>
+  <link rel="icon" type="image/png" href="https://i.imgur.com/84ZFT7V.png">
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.7.0/css/tachyons.min.css">
 </head>
 
